Commit for the 0.5 exercise

--- a/part0/0.4-new-note-exercise.md
+++ b/part0/0.4-new-note-exercise.md
@@ -33,5 +33,5 @@ sequenceDiagram
     server-->>browser: [{ "content": "HTML is easy", "date": "2023-3-9" }, ... ]
     deactivate server
 
-    Note left of server: The server sends back the raw data
+    Note left of server: The server sends back the JSON
 ```
